[package]
name = "axum-reqwest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.3"
axum = { version = "0.6.0-rc.1", features = ["multipart"] }
bytes = "1.2.1"
futures = "0.3.23"
reqwest = { version = "0.11.11", features = ["stream"] }
tokio = { version = "1.20.1", features = ["sync", "rt-multi-thread", "macros"] }
url = "2.2.2"
